--- a/src/containers/UsersPage/UsersPage.module.css
+++ b/src/containers/UsersPage/UsersPage.module.css
@@ -1,8 +1,9 @@
 .container {
-    padding-top: 60px;
-    width: 50%;
-    max-width: 400px;
     margin: 0 auto;
+    padding-top: 60px;
+    width: 96%;
+    max-width: 1080px;
+    position: relative;
 }
 
 .successBlock {
@@ -17,8 +18,10 @@
 
 .userForm {
     background-color: #ffffff;
+    width: 50%;
+    margin: 0 auto;
     border-radius: 16px;
-    height: 150px;
+    height: 180px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -26,31 +29,43 @@
 
 .userForm__field {
     width: 80%;
-    padding-top: 30px;
-}
-
-.userForm__field label {
-    display: block;
-    bottom: 6px;
-}
-
-.userForm__field__activeLabel {
-    font-size: 14px;
-    transform: translateY(calc(-1 * 20px));
-    -ms-transform: translateY(calc(-1 * 20px));
+    padding-top: 46px;
 }
 
 .userForm__field input {
+    padding-left: 2px;
+    font-size: 16px;
+    font-weight: bold;
+    color: rgba(0, 0, 0, 0.55);
     display: block;
-    padding: 0;
     height: 20px;
     margin-bottom: 8px;
     width: calc(100% - 30px);
 }
 
+.userForm__field label {
+    display: block;
+    bottom: 8px;
+    font-family: Roboto;
+    font-size: 16px;
+    font-weight: normal;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 1.29;
+    letter-spacing: normal;
+    color: rgba(0, 0, 0, 0.55);
+}
+
+.userForm__field__activeLabel {
+    font-size: 14px;
+    transform: translateY(calc(-1 * 26px));
+    -ms-transform: translateY(calc(-1 * 26px));
+}
+
 .userForm__button {
-    margin-top: 30px;
-    padding: 5px 30px;
+    position: absolute;
+    padding: 8px 30px;
+    bottom: 30px;
 }
 
 ::-ms-clear, ::-ms-reveal {
@@ -60,6 +75,7 @@
 .error {
     margin-top: 10px;
     color: #f6650a;
+    font-family: Roboto;
 }
 
 .successBlock__button {
