--- a/src/containers/UsersPage/UsersPage.module.css
+++ b/src/containers/UsersPage/UsersPage.module.css
@@ -9,11 +9,23 @@
 .successBlock {
     background-color: #ffffff;
     border-radius: 16px;
-    height: 150px;
+    height: 180px;
+    width: 50%;
+    margin: 0 auto;
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
+    justify-content: center;
+}
+
+.successBlock p {
+    margin-top: 50px;
+    font-family: Roboto;
+    font-size: 16px;
+    font-weight: normal;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 1.29;
+    letter-spacing: normal;
+    color: rgba(0, 0, 0, 0.55);
 }
 
 .userForm {
@@ -62,7 +74,7 @@
     -ms-transform: translateY(calc(-1 * 26px));
 }
 
-.userForm__button {
+.userForm__button, .successBlock__button{
     position: absolute;
     padding: 8px 30px;
     bottom: 30px;
@@ -76,8 +88,4 @@
     margin-top: 10px;
     color: #f6650a;
     font-family: Roboto;
-}
-
-.successBlock__button {
-    padding: 5px 30px;
 }
