--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+html, body {
+    min-width: 800px;
+    font-family: SBSansText, sans-serif;
+}
+
 body, ul, li, p {
     margin: 0;
     padding: 0;
