--- a/src/containers/SliderPage/SliderPage.module.css
+++ b/src/containers/SliderPage/SliderPage.module.css
@@ -41,3 +41,72 @@
     75% { content: '...' }
     100% { content: '' }
 }
+
+
+
+
+
+
+.container {
+    position: relative;
+    height: 250px;
+    margin: 100px auto 0;
+    width: 50%;
+}
+
+.loginForm {
+    max-width: 400px;
+    width: 100%;
+    margin: 0 auto;
+}
+
+.loginForm__field {
+    padding-top: 36px;
+}
+
+.loginForm__field input {
+    display: block;
+    height: 20px;
+    margin-bottom: 8px;
+    bottom: 6px;
+    padding-left: 2px;
+    width: calc(100% - 30px);
+    font-size: 16px;
+    font-weight: bold;
+    color: rgba(0, 0, 0, 0.55);
+}
+
+.loginForm__field label {
+    display: block;
+    bottom: 0;
+    font-family: Roboto;
+    font-size: 16px;
+    font-weight: normal;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 1.29;
+    letter-spacing: normal;
+    color: rgba(0, 0, 0, 0.55);
+}
+
+.loginForm__field__activeLabel {
+    font-size: 14px;
+    transform: translateY(calc(-1 * 26px));
+    -ms-transform: translateY(calc(-1 * 26px));
+}
+
+::-ms-clear, ::-ms-reveal {
+    display: none;
+}
+
+.loginForm__button {
+    position: absolute;
+    bottom: 0;
+    padding: 5px 30px;
+}
+
+.error {
+    margin-top: 10px;
+    color: #f6650a;
+    font-family: Roboto;
+}
