--- a/src/containers/SliderPage/SliderPage.module.css
+++ b/src/containers/SliderPage/SliderPage.module.css
@@ -34,6 +34,54 @@
     animation: dots 1.6s infinite;
 }
 
+.modalForm {
+    position: relative;
+    padding: 40px 40px 80px 40px;
+}
+
+.modalForm .crossSvg {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    width: 35px;
+}
+
+.modalForm .imageUploadContainer {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    max-width: 400px;
+    margin: 0 auto;
+    padding: 40px 0 10px;
+    color: rgba(0, 0, 0, 0.55);
+}
+
+.modalForm .imageUploadContainer > label {
+    padding-bottom: 15px;
+    font-family: Roboto, sans-serif;
+    font-size: 16px;
+    font-weight: normal;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 1.29;
+    letter-spacing: normal;
+    text-transform: uppercase;
+}
+
+.modalForm .imageUpload {
+    padding: 40px;
+
+    font-family: Roboto, sans-serif;
+    font-size: 14px;
+    font-weight: 300;
+    text-align: center;
+
+    border: 1px solid #bcbcbc;
+    border-radius: 4px;
+    background-color: #f7f7f7;
+}
+
+
 @keyframes dots {
     0% { content: '' }
     25% { content: '.' }
@@ -79,7 +127,7 @@
 .loginForm__field label {
     display: block;
     bottom: 0;
-    font-family: Roboto;
+    font-family: Roboto, sans-serif;
     font-size: 16px;
     font-weight: normal;
     font-stretch: normal;
@@ -101,12 +149,12 @@
 
 .loginForm__button {
     position: absolute;
-    bottom: 0;
+    bottom: 35px;
     padding: 5px 30px;
 }
 
 .error {
     margin-top: 10px;
     color: #f6650a;
-    font-family: Roboto;
+    font-family: Roboto, sans-serif;
 }
