--- a/src/components/DzoItem/SimpleDzoItem.module.css
+++ b/src/components/DzoItem/SimpleDzoItem.module.css
@@ -1,13 +1,13 @@
 
-.landingItem {
+.simpleDzoItem {
     display: flex;
     font-family: inherit;
-    padding: 30px;
-    border-radius: 4px;
+    padding: 0px;
+    border-radius: 1px;
     background-color: #fff;
 }
 
-.landingItem .descrWrapper {
+.simpleDzoItem .descrWrapper {
     flex: 5;
     display: flex;
     flex-direction: column;
@@ -18,31 +18,13 @@
     flex: 9;
 }
 
-.descrWrapper .landingActions {
+.descrWrapper .simpleDzoActions {
+    flex: 1;
     display: flex;
     justify-content: flex-end;
 }
 
-.descrWrapper .landingActions > button:last-child {
-    margin-left: 20px;
-}
-
-.container__button {
-    margin-right: 30px;
-    padding: 10px 20px;
-}
-
-.arrow_image {
-    /*width: 100%;*/
-    height: 30px;
-    margin-right: 40px;
-    cursor: pointer;
-}
-.arrow_image:active {
-    background-color: deepskyblue;
-}
-
-.landingItem .imageWrapper {
+.simpleDzoItem .imageWrapper {
     flex: 5;
     min-height: 200px;
     max-height: 200px;
@@ -53,23 +35,22 @@
     border: 2px solid #ececec;
     border-radius: 4px;
 }
-
-.landingItem  .textFieldFormat {
+.dzoItem .textFieldFormat {
     display: flex;
     flex-direction: column;
     font-family:Tahoma, sans-serif;
-    font-size:16px;
+    font-size:18px;
     margin-bottom: 10px;
 }
-.landingItem  .headerFormat {
+.dzoItem .headerFormat {
     display: flex;
     flex-direction: row;
     font-family:Tahoma, sans-serif;
-    font-size:16px;
+    font-size:18px;
     margin-bottom: 3px;
 }
-.landingItem .textFormat {
+.dzoItem .textFormat {
     font-family:Tahoma, sans-serif;
-    font-size:16px;
+    font-size:18px;
     margin-bottom: 10px;
 }
