add scroll to dzo edit form and add/edit app url form

--- a/src/components/DzoItem/DzoItem.module.css
+++ b/src/components/DzoItem/DzoItem.module.css
@@ -31,7 +31,7 @@
     justify-content: flex-end;
 }
 
-.descrWrapper .dzoActions > button:last-child {
+.descrWrapper .dzoActions > button {
     margin-left: 20px;
 }
 
