--- a/src/containers/FilesPage/FilesPage.module.css
+++ b/src/containers/FilesPage/FilesPage.module.css
@@ -10,8 +10,9 @@
     flex-wrap: nowrap;
     flex-direction: row;
     flex: 1 1 0px;
+    align-items: center;
     margin: 0 auto;
-    padding: 10px 0px;
+    padding: 0px 0px 20px;
 }
 
 .container__button {
@@ -34,3 +35,146 @@
     height: 16px;
 }
 
+.pdfUploadContainer {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    max-width: 400px;
+    margin: 0 auto;
+    padding: 20px 0 10px;
+    color: rgba(0, 0, 0, 0.55);
+}
+
+.pdfUploadContainer > label {
+    padding-bottom: 15px;
+    font-family: Roboto, sans-serif;
+    font-size: 16px;
+    font-weight: normal;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 1.29;
+    letter-spacing: normal;
+    text-transform: uppercase;
+}
+
+.headerSection a {
+    align-items: center;
+    margin-right: 30px;
+}
+
+.modalForm {
+    position: relative;
+    padding: 40px 40px 80px 40px;
+}
+
+.modalForm .crossSvg {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    width: 35px;
+}
+
+.modalForm .pdfUploadContainer {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    max-width: 400px;
+    margin: 0 auto;
+    padding: 40px 0 10px;
+    color: rgba(0, 0, 0, 0.55);
+}
+
+.modalForm .pdfUploadContainer > label {
+    padding-bottom: 15px;
+    font-family: Roboto, sans-serif;
+    font-size: 16px;
+    font-weight: normal;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 1.29;
+    letter-spacing: normal;
+    text-transform: uppercase;
+}
+
+.modalForm .pdfUpload {
+    padding: 40px;
+
+    font-family: Roboto, sans-serif;
+    font-size: 14px;
+    font-weight: 300;
+    text-align: center;
+
+    border: 1px solid #bcbcbc;
+    border-radius: 4px;
+    background-color: #f7f7f7;
+}
+
+@keyframes dots {
+    0% { content: '' }
+    25% { content: '.' }
+    50% { content: '..' }
+    75% { content: '...' }
+    100% { content: '' }
+}
+
+.container {
+    position: relative;
+    height: 250px;
+}
+
+.pdfForm {
+    max-width: 400px;
+    width: 100%;
+    margin: 0 auto;
+}
+
+.pdfForm__field {
+    padding-top: 36px;
+}
+
+.pdfForm__field input {
+    display: block;
+    height: 20px;
+    margin-bottom: 8px;
+    bottom: 6px;
+    padding-left: 2px;
+    width: calc(100% - 30px);
+    font-size: 16px;
+    font-weight: bold;
+    color: rgba(0, 0, 0, 0.55);
+}
+
+.pdfForm__field label {
+    display: block;
+    bottom: 0;
+    font-family: Roboto, sans-serif;
+    font-size: 16px;
+    font-weight: normal;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 1.29;
+    letter-spacing: normal;
+    color: rgba(0, 0, 0, 0.55);
+}
+
+.pdfForm__field__activeLabel {
+    font-size: 14px;
+    transform: translateY(calc(-1 * 26px));
+    -ms-transform: translateY(calc(-1 * 26px));
+}
+
+::-ms-clear, ::-ms-reveal {
+    display: none;
+}
+
+.pdfForm__button {
+    position: absolute;
+    bottom: 35px;
+    padding: 5px 30px;
+}
+
+.error {
+    margin-top: 10px;
+    color: #f6650a;
+    font-family: Roboto, sans-serif;
+}
