--- a/src/containers/DzoPage/DzoPage.module.css
+++ b/src/containers/DzoPage/DzoPage.module.css
@@ -116,6 +116,7 @@
     max-width: 400px;
     width: 100%;
     margin: 0 auto;
+    padding: 5px 0px 5px;
 }
 
 .dzoForm__field {
@@ -125,7 +126,7 @@
 .dzoForm__field input {
     display: block;
     height: 20px;
-    margin-bottom: 8px;
+    margin-bottom: 3px;
     bottom: 6px;
     padding-left: 2px;
     width: calc(100% - 30px);
@@ -159,7 +160,7 @@
 
 .dzoForm__button {
     position: absolute;
-    top: 670px;
+    top: 710px;
     padding: 5px 30px;
 }
 
