--- a/src/components/Menu/Menu.module.css
+++ b/src/components/Menu/Menu.module.css
@@ -19,6 +19,7 @@
     line-height: 1.5;
     letter-spacing: -0.3px;
     color: #000014;
+    text-align: center;
 }
 
 .clientAppItem {
@@ -34,6 +35,7 @@
     text-align: right;
     color: #0000FF;
     cursor: pointer;
+    text-align: center;
 }
 
 .menu__item:hover {
