--- a/src/containers/UsersPage/UsersPage.module.css
+++ b/src/containers/UsersPage/UsersPage.module.css
@@ -75,9 +75,17 @@
 }
 
 .userForm__button, .successBlock__button{
+    position: relative;
+    padding: 8px 30px;
+    bottom: -50px;
+    display: inline-block;
+}
+
+.successBlock__button{
     position: absolute;
     padding: 8px 30px;
     bottom: 30px;
+    display: inline-block;
 }
 
 ::-ms-clear, ::-ms-reveal {
