--- a/src/containers/UsersPage/UsersPage.module.css
+++ b/src/containers/UsersPage/UsersPage.module.css
@@ -14,6 +14,8 @@
     margin: 0 auto;
     display: flex;
     justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 
 .successBlock p {
@@ -81,11 +83,17 @@
     display: inline-block;
 }
 
-.successBlock__button{
-    position: absolute;
+.successBlock__button {
     padding: 8px 30px;
-    bottom: 30px;
     display: inline-block;
+    bottom: auto;
+}
+
+.packetProcessing__block {
+    position: relative;
+    padding: 8px 30px;
+    display: inline-block;
+    bottom: auto;
 }
 
 ::-ms-clear, ::-ms-reveal {
@@ -96,4 +104,7 @@
     margin-top: 10px;
     color: #f6650a;
     font-family: Roboto;
+}
+.template__link {
+    padding-left: 5px;
 }
