--- a/src/containers/ClientAppPage/ClientAppPage.module.css
+++ b/src/containers/ClientAppPage/ClientAppPage.module.css
@@ -21,6 +21,7 @@
     font-size: 25px;
     font-weight: 500;
     color: rgb(0, 0, 20);
+    margin-right: 25px;
 }
 
 .clientAppPageWrapper .headerSection {
