--- a/src/containers/UsersPage/UsersPage.module.css
+++ b/src/containers/UsersPage/UsersPage.module.css
@@ -34,7 +34,7 @@
 
 .userForm {
     background-color: #ffffff;
-    width: 60%;
+    width: 50%;
     margin: 0 auto;
     border-radius: 16px;
     height: 200px;
@@ -83,6 +83,7 @@
 .userForm__button, .successBlock__button{
     position: relative;
     padding: 8px 15px;
+    margin-right: 5px;
     bottom: -20px;
     display: inline-block;
 }
