WDZO-553 promoCampaign page
Squashed commit of the following:

commit 65d2e37743f733b82309590aea5446c8e3d1d420
Author: Alexander Voytenko <ANiVoytenko@sberbank.ru>
Date:   Thu Oct 8 12:01:42 2020 +0300

    WDZO-553 fix promo campaign order after update

commit 826750ae9b3df4795f28f7a810910a052c4af61d
Author: Alexander Voytenko <ANiVoytenko@sberbank.ru>
Date:   Wed Oct 7 15:37:32 2020 +0300

    WDZO-553 some more corrections

commit d7927118a4dc760bad33b01cb4cdcabc580b177b
Author: Alexander Voytenko <ANiVoytenko@sberbank.ru>
Date:   Tue Oct 6 15:18:53 2020 +0300

    WDZO-553 some corrections

commit 9921e26f69eda3d9ab48a55c9fce257f2dddb223
Author: Alexander Voytenko <ANiVoytenko@sberbank.ru>
Date:   Thu Oct 1 16:43:58 2020 +0300

    add sort, add support for adding more than one promo campaign to dzo

commit 0761a0734a1755ff564d9241bd3c77f6cb89a847
Author: Alexander Voytenko <ANiVoytenko@sberbank.ru>
Date:   Sat Sep 26 15:11:54 2020 +0300

    WDZO-553 fix the content type assignment

commit 6dbea2de3a2fa963581a77fcdd70d6495d5ae817
Author: Alexander Voytenko <ANiVoytenko@sberbank.ru>
Date:   Fri Sep 25 15:35:05 2020 +0300

    WDZO-553 promoCampaignPage

--- a/src/containers/PromoCampaignPage/PromoCampaignPage.module.css
+++ b/src/containers/PromoCampaignPage/PromoCampaignPage.module.css
@@ -1,68 +1,26 @@
-.wrapper {
-    width: 100%;
-    min-height: calc(100vh - 40px);
-    background-color: #ececec;
+.promoCampaignsLink {
+    display: inline-block;
+    color: #1890ff;
+    background: transparent;
+    text-decoration: none;
+    outline: none;
+    cursor: pointer;
+    transition: color 0.3s;
+    margin-left: 4px;
+}
+.promoCampaigns .am-list-header {
+    padding: 15px 15px 9px 10px !important; }
+
+.row-dragging {
+    background: #fafafa;
+    border: 1px solid #ccc;
 }
 
-.promoCampaignPageWrapper {
-    margin: 0 auto;
-    padding-top: 30px;
-    width: 96%;
-    max-width: 1080px;
-    font-family: inherit;
+.row-dragging td {
+    padding: 16px;
+    visibility: hidden;
 }
 
-.promoCampaignList > div:not(:last-child) {
-    margin-bottom: 30px;
-}
-
-.promoCampaignPageWrapper h3 {
-    font-family: inherit;
-    font-size: 25px;
-    font-weight: 500;
-    color: rgb(0, 0, 20);
-}
-
-.promoCampaignPageWrapper .headerSection {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 30px;
-}
-
-.promoCampaignPageWrapper .loadingLabel {
-    position: relative;
-}
-
-.promoCampaignPageWrapper .loadingLabel:after {
-    position: absolute;
-    content: '';
-    animation: dots 1.6s infinite;
-}
-
-.modalForm {
-    position: relative;
-    padding: 10px 40px 20px 20px;
-}
-
-.modalForm .crossSvg {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    width: 35px;
-}
-
-.promoCampaignStatistics {
-    border-radius: 5px;
-    color: #fff;
-    padding: 10px 14px 10px 10px;
-    position: relative;
-    box-shadow: 0 1px 5px #999;
-    background-color: #8a9bab;
-}
-
-.error {
-    margin-top: 10px;
-    color: #f6650a;
-    font-family: Roboto, sans-serif;
+.row-dragging .drag-visible {
+    visibility: visible;
 }
