--- a/src/components/PromoCampaignItem/PromoCampaignItem.module.css
+++ b/src/components/PromoCampaignItem/PromoCampaignItem.module.css
@@ -1,29 +1,14 @@
-.promoCampaignItem {
-    display: flex;
-    font-family: inherit;
-    padding: 30px;
-    border-radius: 4px;
-    background-color: #fff;
-    margin-bottom: 30px;
+.description table{
+    width: 100% !important;
+    border-collapse: collapse;
 }
 
-.promoCampaignItem .descrWrapper {
-    flex: 5;
-    display: flex;
-    flex-direction: column;
-    padding-left: 20px;
+.description table {
+   border: #000014;
 }
-
-.descrWrapper .fieldsWrapper {
-    flex: 9;
+.description table tr td{
+   background-color: white;
 }
-
-.descrWrapper .promoCampaignItemActions {
-    flex: 1;
-    display: flex;
-    justify-content: flex-end;
-}
-
-.descrWrapper .promoCampaignItemActions > button:last-child {
-    margin-left: 20px;
+.description table tr th{
+    font-weight: bold;
 }
