WDZO-759 administrate client application properties
Squashed commit of the following:

commit 6eed2f92c87141bd76255d21e92e038d30818719
Author: Daniil Krasnov <dk98126@yandex.ru>
Date:   Thu Oct 8 17:17:22 2020 +0300

    WDZO-759 some refactorings

commit 01e74ef3c27a1eb2a9c6e0bc1fcba1c699821a1a
Author: Daniil Krasnov <dk98126@yandex.ru>
Date:   Wed Oct 7 14:38:09 2020 +0300

    WDZO-759 administrate client application properties

--- a/src/containers/ClientAppPage/ClientAppPage.module.css
+++ b/src/containers/ClientAppPage/ClientAppPage.module.css
@@ -61,14 +61,14 @@
 
 .clientAppForm__field input {
     display: block;
-    height: 20px;
-    margin-bottom: 8px;
+    height: 24px;
     bottom: 6px;
     padding-left: 2px;
     width: calc(100% - 30px);
     font-size: 16px;
     font-weight: bold;
     color: rgba(0, 0, 0, 0.55);
+    margin-top: 20px;
 }
 
 .clientAppForm__field label {
@@ -81,7 +81,7 @@
     font-style: normal;
     line-height: 1.29;
     letter-spacing: normal;
-    color: rgba(0, 0, 0, 0.55);
+    color: #046732;
 }
 
 .clientAppForm__field__activeLabel {
