--- a/src/containers/UsersPage/UsersPage.module.css
+++ b/src/containers/UsersPage/UsersPage.module.css
@@ -88,6 +88,7 @@
     position: relative;
     padding: 8px 15px;
     margin-right: 5px;
+    margin-bottom: 15px;
     bottom: -20px;
     display: inline-block;
 }
@@ -134,6 +135,15 @@
     overflow-wrap: break-word;
     width: 95%;
 }
+
 .template__link {
     padding-left: 5px;
+}
+
+.actionsPanelClasses {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 15px;
 }
